fixed some spacing issues

--- a/src/styles/exceptions/_box.table-of-contents.scss
+++ b/src/styles/exceptions/_box.table-of-contents.scss
@@ -3,7 +3,7 @@
   z-index: 3;
   padding: 0;
   margin-top: 5rem;
-  margin-bottom: 5rem;
+  margin-bottom: 1rem;
   // accounts for the gradient
   margin-right: var(--gutter);
   border: 0;
